syntax = "proto3";

package user.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "api/user/v1;v1";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (google.protobuf.Empty);
  rpc GetUser(GetUserRequest) returns (GetUsersReply);
  rpc GetAllUser(google.protobuf.Empty) returns (GetUserAllReply);
  rpc UpdateUser(UpdateRequest) returns (UpdateReply) {
    option (google.api.http) = {
      put: "api/v1/user/update",
      body: "*",
    };
  }
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUsersReply);
}

message User{
   uint64 id = 1;
   string user_name = 2;
   string password = 3;
   string nick_name = 4;
   string email = 5;
}

message CreateUserRequest {
  User user = 1;
}

message GetUserRequest {
  uint64 id = 1;
}

message GetUsersReply {
  User user = 1;
}

message LoginRequest {
  string user_name = 1;
  string password = 2;
}

message LoginRely {
  User user = 1;
}

message GetUserAllReply{
  repeated User users = 1;
  int64 total = 2;
}

message UpdateRequest {
  User user = 1;
}

message UpdateReply {
  string message = 1;
  string success = 2;
}

message GetUserByEmailRequest {
  string email = 1;
}

